Update database sql constraints